<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_last"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_last"/>
    
    <item
        android:id="@+id/action_next"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_next"/>
    
    <item
        android:id="@+id/action_hot"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_hot"/>
    
    <item
        android:id="@+id/action_new"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/action_new"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_help"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    

</menu>